# Quake-2

./: meson.build
ctf/: g_local.h
linux/: d_copy.s  net_udp.c  q_shlinux.c  rw_in_svgalib.c  rw_svgalib.c  rw_x11.c  snd_linux.c  sys_dosa.s  sys_linux.c  vid_menu.c  vid_so.c
qcommon/: common.c
ref_gl/: gl_rmain.c  qgl.h
server/: sv_ccmds.c
